<resources>
    <string name="app_name">MinhaPedida</string>
    <string name="minhaComanda_text">Minha comanda</string>
    <string name="addProduto_text">Adicionar Produto</string>
    <string name="limparLista_text">Limpar Lista</string>
    <string name="total_text">Total: </string>
    <string name="moeda_text">R$ </string>
    <string name="produto_text">Produto</string>
    <string name="qtd_text">Quantidade</string>
    <string name="enviar_text">Enviar</string>
    <string name="comanda_title">Comandas</string>
    <string name="minhaComanda_title">Minha Comanda</string>
    <string name="addProduto_title">Adicionar Produto</string>
    <string name="cadastroProduto">Cadastro de Produtos</string>
    <string name="nomeProduto">Nome do Produto</string>
    <string name="preco">Preço</string>
    <string name="status" translatable="false">Status</string>
    <string name="salvar">Salvar</string>
    <string name="nomeInvalido">Nome inválido</string>
    <string name="numeroInvalido">Preço deve estar entre 0 e 9999</string>
    <string name="listarAtivos">Listar Somente os Ativos</string>
    <string name="editar">Editar</string>
    <string name="fechar">Fechar</string>
    <string name="salvoSucesso">Salvo com sucesso!</string>
    <string name="tenteDeNovo">Tente novamente mais tarde...</string>
    <string name="excluindo">Excluindo Produto</string>
    <string name="confirmaExclusao">Deseja realmente excluir o produto</string>
    <string name="nao">Não</string>
    <string name="sim">Sim</string>
    <string name="sucesso">Sucesso!</string>
</resources>
