<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context=".view.addProduto_activity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/addProduto_text"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_margin="10dp"
        android:background="#A5A8A8A8"
        android:outlineSpotShadowColor="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/produto_text"
        android:textSize="15sp" />

    <Spinner
        android:id="@+id/spnrProdutos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/limparLista_text"
        android:padding="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/produto_text"
            android:textSize="15sp" />

        <NumberPicker
            android:id="@+id/npQuantidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="25dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/btn_bordas_arredondadas"
        android:text="@string/enviar_text"
        android:textColor="@color/white" />

</LinearLayout>