<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <Button
        android:id="@+id/btnAddProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/btn_bordas_arredondadas"
        android:onClick="chamaTelaAddProduto"
        android:text="@string/addProduto_text"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnLimparLista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/btn_bordas_arredondadas"
        android:text="@string/limparLista_text"
        android:onClick="limparLista"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/total_text"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/lvProdutos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp" />

    </RelativeLayout>

</LinearLayout>